Fixed progress bar on mobile view

--- a/src/modules/feed/components/GoalProgress/GoalProgress.scss
+++ b/src/modules/feed/components/GoalProgress/GoalProgress.scss
@@ -2,6 +2,7 @@
     margin: auto;
     height: 3em;
     padding-top: 8px;
+    max-width: 448px;
 }
 
 .lock_container {
@@ -19,4 +20,6 @@
 
 .line {
     width: calc(100vw - 90px);
+    max-width: 358px;
+    height: 10px;
 }
